use environment variable for train tracker API key
license headers

fix build issues with API